[console] Fix invisible tab focus border for pin close button.
Fixed: chromium:1514412

--- a/front_end/panels/console/consolePinPane.css
+++ b/front_end/panels/console/consolePinPane.css
@@ -7,7 +7,7 @@
 .close-button {
   position: absolute;
   top: 3px;
-  left: 0;
+  left: 3px;
 }
 
 .console-pins {
@@ -45,7 +45,7 @@
 }
 
 .console-pin-name {
-  margin-left: -4px;
+  margin-left: -1px;
   margin-bottom: 1px;
   height: auto;
 }
@@ -60,6 +60,7 @@
 
 .console-pin-preview {
   overflow: hidden;
+  padding-left: 3px;
 }
 
 .console-pin-name:focus-within {
